--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>TODO supply a title</title>
+        <title>Hoja de Vida - David Ortiz</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=no">
+        <meta name="description" content="hoja de vida - David Ortiz">
+        <meta name="keywords" content="hoja de vida - David Ortiz" />
+        <meta name="author" content="David Ortiz">
     </head>
     <body>
+        <header>
+            
+        </header>
         <div>TODO write content</div>
     </body>
 </html>
