--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,13 +34,13 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-12">
                         <svg width="400px" height="284px">
                         <image xlink:href="img/logo_ort.svg" width="400px" height="284px"></image>
                         <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
                         </svg>
                     </div>
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-12">
                         <h1>Hoja de Vida</h1>
                         <h2>David A. Ortiz O.</h2>
                         <h3>28 Septiembre 1987 - Rionegro Antioquia</h3>
@@ -52,7 +52,7 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="parrafo col-sm-6 col-xs-12">
+                    <div class="parrafo col-sm-12">
                         <h2>Información Personal</h2>
                         <p>Diez años de experiencia trabajando con tecnologías de información y comunicaciones;
                             dinámico y habituado al trabajo bajo presión y en equipo; con experiencia en atención
@@ -63,7 +63,7 @@
                             problemas.
                         </p>
                     </div>
-                    <div class="foto col-sm-6 col-xs-12">
+                    <div class="foto col-sm-12">
                         <img src="img/David_Ortiz_1035911164.png" alt="David_Ortiz_1035911164">
                     </div>
                 </div>
