--- a/public_html/index.html
+++ b/public_html/index.html
@@ -73,7 +73,11 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    
+                    <div class="footer col-sm-12" >
+                        <a href="" ><span class="glyphicon glyphicon-envelope"></span> davidaortizo@gmail.com</a>
+                        <a><span class="glyphicon glyphicon-phone"></span> 3137195941</a>
+                        <a><span class="glyphicon glyphicon-home"></span> Calle 40 N° 44 - 27  Int 1818 / Rionegro Antioquia</a>
+                    </div>
                 </div>
             </div>
         </footer>
