--- a/public_html/experiencia.html
+++ b/public_html/experiencia.html
@@ -6,11 +6,86 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Experiencia | Hoja de Vida - David Ortiz</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="hoja de vida - David Ortiz">
+        <meta name="keywords" content="hoja de vida - David Ortiz" />
+        <meta name="author" content="David Ortiz">
+        
+        <!-- core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+        <link href="css/main.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header>
+            <nav class="navbar navbar-inverse">
+                <div class="container">
+                    <div class="collapse navbar-collapse navbar-right">
+                        <ul class="nav navbar-nav">
+                            <li><a href="index.html">David Ortiz</a></li>
+                            <li><a href="educacion.html">Educación</a></li>
+                            <li class="active"><a href="experiencia.html">Experiencia</a></li>                     
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <svg width="400px" height="284px">
+                        <image xlink:href="img/logo_ort.svg" width="400px" height="284px"></image>
+                        <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+                        </svg>
+                    </div>
+                    <div class="col-sm-12">
+                        <h1>Hoja de Vida</h1>
+                        <h2>David A. Ortiz O.</h2>
+                        <h3>28 Septiembre 1987 - Rionegro Antioquia</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="tabla col-sm-12">
+                        <h2>Experiencia</h2>
+                        <video width="560" controls>
+                            <source src="media/dolby-countdown-v1.ogv" type="video/ogg">
+                            <source src="media/dolby-countdown-v1.mkv" type="video/mkv">
+                            <source src="media/dolby-countdown-v1.mp4" type="video/mp4">
+                            Your browser does not support the <code>video</code> tag.
+                        </video>
+                    </div>
+                    <div class="col-sm-12">
+                        <h2>THX Always Coca-Cola (Commercial)</h2>
+                        <div class="audio container">
+                            <audio controls loop>
+                                <source src="media/THX-AlwaysCoca-Cola(Commercial).mp3" type="audio/mpeg">
+                                Your browser does not support the <code>audio</code> tag.
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="footer col-sm-12" >
+                        <a href="" ><span class="glyphicon glyphicon-envelope"></span> davidaortizo@gmail.com</a>
+                        <a><span class="glyphicon glyphicon-phone"></span> 3137195941</a>
+                        <a><span class="glyphicon glyphicon-home"></span> Calle 40 N° 44 - 27  Int 1818 / Rionegro Antioquia</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
